--- a/member-mvc/WebContent/index.html
+++ b/member-mvc/WebContent/index.html
@@ -3,12 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>멤버 관리 프로그램</title>
+	<title>관리 프로그램</title>
 </head>
 <body>
-	<h2>멤버 관리 프로그램</h2>
+
+<h1>[멤버/게시판 관리 프로그램]</h1>
 	<hr>
+	<h3>멤버 관리 프로그램</h3>
+
 	<a href="insertForm.do">멤버 입력</a><br>
-	<a href="list.do">멤버 목록</a><br>
+	<a href="list.do">멤버 목록</a><br><br>
+	<hr>
+	<h3>게시판 관리 프로그램</h3>
+	
+	<a href="">게시글 입력</a><br>
+	<a href="">게시글 목록</a><br>
 </body>
 </html>
